#221, Description added for PANTHER sets. #226 Text collapsing on the top of Protvista viewer is fixed

--- a/src/components/ProtVista/style.css
+++ b/src/components/ProtVista/style.css
@@ -183,6 +183,7 @@ g:global(.child-group) path:global(.feature) {
 
 .aligned-to-track-component.label-by-name {
   width: 70%;
+  line-height: inherit;
 }
 
 .track-accession {
